[gd_scene load_steps=4 format=2]

[ext_resource path="res://Themes/BaseUITheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/OptionsMenu/OptionsMenu.gd" type="Script" id=2]
[ext_resource path="res://Fonts/BigUIFont.tres" type="DynamicFont" id=3]

[node name="OptionsMenu" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.0
margin_top = -7.0
margin_right = 7.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBC" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1007.0
margin_bottom = 746.0
rect_min_size = Vector2( 1000, 0 )
custom_constants/separation = 50

[node name="Label" type="Label" parent="VBC"]
margin_right = 1000.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 3 )
text = "OPTIONS_TITLE"
align = 1

[node name="SettingsSC" type="ScrollContainer" parent="VBC"]
margin_top = 138.0
margin_right = 1000.0
margin_bottom = 638.0
rect_min_size = Vector2( 0, 500 )
rect_clip_content = false
scroll_horizontal_enabled = false
scroll_vertical_enabled = false

[node name="SettingsVBC" type="VBoxContainer" parent="VBC/SettingsSC"]
margin_right = 1000.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25

[node name="FullscreenHBC" type="HBoxContainer" parent="VBC/SettingsSC/SettingsVBC"]
margin_right = 1000.0
margin_bottom = 53.0
hint_tooltip = "OPTIONS_FULLSCREEN_HINT"

[node name="Label" type="Label" parent="VBC/SettingsSC/SettingsVBC/FullscreenHBC"]
margin_top = 4.0
margin_right = 972.0
margin_bottom = 49.0
size_flags_horizontal = 3
text = "OPTIONS_FULLSCREEN"

[node name="FullscreenCB" type="CheckBox" parent="VBC/SettingsSC/SettingsVBC/FullscreenHBC"]
margin_left = 976.0
margin_right = 1000.0
margin_bottom = 53.0

[node name="ResolutionHBC" type="HBoxContainer" parent="VBC/SettingsSC/SettingsVBC"]
margin_top = 78.0
margin_right = 1000.0
margin_bottom = 129.0
hint_tooltip = "OPTIONS_RESOLUTION_HINT"

[node name="Label" type="Label" parent="VBC/SettingsSC/SettingsVBC/ResolutionHBC"]
margin_top = 3.0
margin_right = 967.0
margin_bottom = 48.0
size_flags_horizontal = 3
text = "OPTIONS_RESOLUTION"

[node name="ResolutionOB" type="OptionButton" parent="VBC/SettingsSC/SettingsVBC/ResolutionHBC"]
margin_left = 971.0
margin_right = 1000.0
margin_bottom = 51.0

[node name="HSeparator" type="HSeparator" parent="VBC/SettingsSC/SettingsVBC"]
margin_top = 154.0
margin_right = 1000.0
margin_bottom = 164.0
custom_constants/separation = 10

[node name="FontSizeHBC" type="HBoxContainer" parent="VBC/SettingsSC/SettingsVBC"]
margin_top = 189.0
margin_right = 1000.0
margin_bottom = 240.0
hint_tooltip = "OPTIONS_FONT_SIZE_HINT"

[node name="Label" type="Label" parent="VBC/SettingsSC/SettingsVBC/FontSizeHBC"]
margin_top = 3.0
margin_right = 967.0
margin_bottom = 48.0
size_flags_horizontal = 3
text = "OPTIONS_FONT_SIZE"

[node name="FontSizeOB" type="OptionButton" parent="VBC/SettingsSC/SettingsVBC/FontSizeHBC"]
margin_left = 971.0
margin_right = 1000.0
margin_bottom = 51.0

[node name="LocaleHBC" type="HBoxContainer" parent="VBC/SettingsSC/SettingsVBC"]
margin_top = 265.0
margin_right = 1000.0
margin_bottom = 316.0
hint_tooltip = "OPTIONS_LOCALE_HINT"

[node name="Label" type="Label" parent="VBC/SettingsSC/SettingsVBC/LocaleHBC"]
margin_top = 3.0
margin_right = 967.0
margin_bottom = 48.0
size_flags_horizontal = 3
text = "OPTIONS_LOCALE"

[node name="LocaleOB" type="OptionButton" parent="VBC/SettingsSC/SettingsVBC/LocaleHBC"]
margin_left = 971.0
margin_right = 1000.0
margin_bottom = 51.0

[node name="HSeparator2" type="HSeparator" parent="VBC/SettingsSC/SettingsVBC"]
margin_top = 341.0
margin_right = 1000.0
margin_bottom = 351.0
custom_constants/separation = 10

[node name="MusicHBC" type="HBoxContainer" parent="VBC/SettingsSC/SettingsVBC"]
margin_top = 376.0
margin_right = 1000.0
margin_bottom = 421.0
hint_tooltip = "OPTIONS_MUSIC_HINT"

[node name="Label" type="Label" parent="VBC/SettingsSC/SettingsVBC/MusicHBC"]
margin_right = 456.0
margin_bottom = 45.0
size_flags_horizontal = 3
text = "OPTIONS_MUSIC"

[node name="MusicHS" type="HSlider" parent="VBC/SettingsSC/SettingsVBC/MusicHBC"]
margin_left = 460.0
margin_right = 916.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="MusicLabel" type="Label" parent="VBC/SettingsSC/SettingsVBC/MusicHBC"]
margin_left = 920.0
margin_right = 1000.0
margin_bottom = 45.0
rect_min_size = Vector2( 80, 0 )
text = "100%"
align = 1

[node name="SFXHBC" type="HBoxContainer" parent="VBC/SettingsSC/SettingsVBC"]
margin_top = 446.0
margin_right = 1000.0
margin_bottom = 491.0
hint_tooltip = "OPTIONS_SFX_HINT"

[node name="Label" type="Label" parent="VBC/SettingsSC/SettingsVBC/SFXHBC"]
margin_right = 456.0
margin_bottom = 45.0
size_flags_horizontal = 3
text = "OPTIONS_SFX"

[node name="SFXHS" type="HSlider" parent="VBC/SettingsSC/SettingsVBC/SFXHBC"]
margin_left = 460.0
margin_right = 916.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="SFXLabel" type="Label" parent="VBC/SettingsSC/SettingsVBC/SFXHBC"]
margin_left = 920.0
margin_right = 1000.0
margin_bottom = 45.0
rect_min_size = Vector2( 80, 0 )
text = "100%"
align = 1

[node name="ButtonsHBC" type="HBoxContainer" parent="VBC"]
margin_top = 688.0
margin_right = 1000.0
margin_bottom = 739.0
custom_constants/separation = 10
alignment = 1

[node name="ApplyButton" type="Button" parent="VBC/ButtonsHBC"]
margin_left = 224.0
margin_right = 482.0
margin_bottom = 51.0
size_flags_horizontal = 4
text = "OPTIONS_APPLY"

[node name="CancelButton" type="Button" parent="VBC/ButtonsHBC"]
unique_name_in_owner = true
margin_left = 492.0
margin_right = 776.0
margin_bottom = 51.0
size_flags_horizontal = 4
text = "OPTIONS_CANCEL"

[connection signal="value_changed" from="VBC/SettingsSC/SettingsVBC/MusicHBC/MusicHS" to="." method="_on_MusicHS_value_changed"]
[connection signal="value_changed" from="VBC/SettingsSC/SettingsVBC/SFXHBC/SFXHS" to="." method="_on_SFXHS_value_changed"]
[connection signal="pressed" from="VBC/ButtonsHBC/ApplyButton" to="." method="_on_ApplyButton_pressed"]
